# SSH-Buddy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE-MIT  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ROADMAP.md  architecture.md  roadmap.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.3.1.md  v0.4.0.md  v0.5.0.md  v0.6.0.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_app_settings.sql  003_server_web_links.sql  004_server_proxy_jump.sql  005_server_tunnels.sql  006_server_rdp_settings.sql  007_rdp_monitor_ids.sql  008_rdp_certificate_mode.sql  009_rdp_scaling_options.sql
src-tauri/src/: commands.rs  db.rs  domain.rs  launcher.rs  main.rs  ssh_config.rs  status.rs
src/lib/: api.ts  clipboard.test.ts  clipboard.ts  filters.test.ts  filters.ts  format.ts  importSummary.test.ts  importSummary.ts  rdp.test.ts  rdp.ts  serverForm.test.ts  serverForm.ts  tunnels.test.ts  tunnels.ts  types.ts  webLinks.test.ts  webLinks.ts
src/styles/: app.css
