[package]
name = "ssh-buddy"
version = "0.1.0"
description = "A fast, modern SSH manager for homelab users."
authors = ["ssh-buddy contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.8.0", features = [] }
