[package]
name = "ssh-buddy"
version = "0.5.0"
description = "A fast, modern SSH manager for homelab users."
authors = ["ssh-buddy contributors"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/QuantumFlux21/SSH-Buddy"
homepage = "https://github.com/QuantumFlux21/SSH-Buddy"
readme = "../README.md"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.8.0", features = [] }
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-opener = "2.5.4"
url = "2"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.13"
